# LabGestao

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_parallel.sh  flake.nix
.github/workflows/: ci.yml
docs/: labgestao_doc_base.md
docs/adr/: ADR-0001-desktop-sdl2-imgui.md  ADR-0002-json-local-persistence.md  ADR-0003-workspace-source-of-truth.md  ADR-0004-auto-kanban-reclassification.md  ADR-0005-application-services-for-orchestration.md  ADR-0006-governance-evidence-and-inventory-signals.md  ADR-0007-ontology-metrics-oci-ocs.md  ADR-0008-laboratory-analysis-context.md  README.md
docs/architecture/: DDD.md  DDD_ONTOLOGY_PROFILE.md  DDD_ONTOLOGY_RECOMMENDATION_ENGINE.md
docs/dai/: DAI.md
docs/manuals/: GOVERNED_CPP_BOOTSTRAP.md  INVENTORY_GOVERNANCE_MODEL.md  METRICS_REFERENCE.md
docs/ontology/: OCI_OCS_FOUNDATION.md  OCI_OCS_FOUNDATION.tex
include/app/: AppRuntime.hpp  ApplicationServices.hpp
include/domain/: Project.hpp  ProjectScaffold.hpp  ProjectStore.hpp
include/ui/: AppUI.hpp  GraphView.hpp  KanbanView.hpp  ListView.hpp
src/: main.cpp
src/app/: AppRuntime.cpp  ApplicationServices.cpp
src/domain/: ProjectScaffold.cpp  ProjectStore.cpp
src/ui/: AppUI.cpp  GraphView.cpp  KanbanView.cpp  ListView.cpp
tests/domain/: DomainTests.cpp
